Tools updatering med maildev och RabbitMQ.